# ytdlpgui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  ytdlpgui.spec
.github/workflows/: ci.yml  docs.yml
app/: __init__.py  icons.py  main.py  main_window.py  splash.py  ui_state.py
app/core/: __init__.py  command_builder.py  config.py  contracts.py  errors.py  format_fetcher.py  paths.py  queue_manager.py  ytdlp_runner.py
app/resources/: theme.qss
app/widgets/: __init__.py  dock.py  error_band.py  flow_layout.py  fly_to_dock.py  format_table.py  media_card.py  omni_bar.py  path_field.py  progress_ring.py  quality_chips.py  queue_panel.py  segmented_switch.py  settings_panel.py  skeleton.py  subtitle_chips.py  title_bar.py  toggle.py
docs/: ARCHITECTURE.md  architecture.md  development.md  getting-started.md  index.md  user-guide.md
docs/stylesheets/: extra.css
installer/: .gitignore  EULA.txt  ytdlpgui.iss
tests/: conftest.py
tests/fixtures/: progress_lines.py  sample_dump.json  sample_flat.json  stderr_samples.py
tests/ui/: conftest.py  test_fetch_flow.py  test_fly_to_dock.py  test_media_card.py  test_omni_bar.py  test_progress_ring.py  test_queue_flow.py  test_settings.py
tests/unit/: test_command_builder.py  test_config.py  test_contracts.py  test_errors.py  test_format_fetcher.py  test_paths.py  test_progress.py  test_queue.py  test_runner_cleanup.py  test_ui_state.py
tools/: make_icon.py  screenshots.py
